--- a/block2.html
+++ b/block2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Block2</title>
-    <link rel="stylesheet" href="./block2.html">
+    <link rel="stylesheet" href="./css/block2.css">
+    <link rel="stylesheet" href="./css/common/reset.css">
 </head>
 <body>
     <div id="root">
