--- a/block5.html
+++ b/block5.html
@@ -10,7 +10,23 @@
     <!-- .header하고 탭치면 div태그적용 -->
      <!-- #root하고 탭치면 태그적용 -->
     <div class="header">header</div>
-    <div class="container">container</div>
+    <div class="container">
+        <div class="shop-list">
+            <ul>
+                <!-- ul>li{li}*8 한번에생성 -->
+                <li>list</li>
+                <li>list</li>
+                <li>list</li>
+                <li>list</li>
+                <li>list</li>
+                <li>list</li>
+                <li>list</li>
+                <li>list</li>
+            </ul>
+        </div>
+
+
+    </div>
     <div class="footer">footer</div>
 </body>
 </html>
